# Python_for_interview_preparation

./: .pre-commit-config.yaml  Q_and_A.txt  README.md  TODO.txt  array_subsets.py  infinite_monkey_problem.py  new.py  new1.py  preparation.md  pyproject.toml  theory.txt  word_combinaion.py
Asssessment/: file_pattern.py  problem_2.py  problem_3.py
DataStructures/: README.md  a_Arithmetic_series.py  b_geometric_series.py  data_structures.md  discussion.txt
DesignPatterns/: chain_of_responsibility.py  design_patterns.txt
Interview_Questions/: DS_for_heavy_read_writes.py  FIX_parsing.py  IKM.py  Problem__list_operations.py  Problem__mark_n_toys.py  Tic_Tac_Toe_game.py  array_balance_min_value.py  array_move_end_zeros.py  array_replace_highest_left.py  array_subsets.py  average_journey_time.py  b_linear_search_ex.py  balancing_braces.py  balancing_braces_json_validation.py  balls_min_swap.py  binary-representation.py  binarytree_superbalanced.py  cache_with_ttl.py  caesar_cipher.py  cards.py  check_pairs.py  check_relation.py  clock_angle.py  coin_denominations.py  conditions.py  constellation_vowels.py  convert_case.py  count_monotonic.py  cowork_space_management.py  defdemo.py  dilemma_problem.py  directions.py  display_nested_array.py  dissociated.py  duck_duck_goose.py  dup_zeros_in_list.py  earthquakes-by-location-and-distance.py  find_largest_puddle.py  find_water.py  first-non-repeating-char.py  (+80 more)
Practice/: TODO  tree-traversal.py
all/: README.md  TODO  balancing_braces.py  cards.py  defdemo.py  first_non_repeating_character.py  hangman.py  question_2.py  (+5 more)
(+504 files in other folders)
