[tool.poetry]
name = "python-for-interview-preparation"
version = "0.1.0"
description = ""
authors = ["udhay Prakash <uday3prakash@gmail.com>"]
readme = "README.md"
packages = [{include = "python_for_interview_preparation"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
